Specifcy specific cargo package versions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,10 @@ path = "examples/json_schema/main.rs"
 
 [dependencies]
 rand = "0.3"
-serde = "*"
-serde_json = "*"
-log = "*"
+serde = "1.0"
+serde_json = "1.0"
+log = "0.3"
 getopts = "0.2"
 time = "0.1"
-pad = "*"
-num = "*"
+pad = "0.1"
+num = "0.1"
